# newsphere

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-dmg-to-main.yml
docs/: default-layout-template.md
public/: catalog-sources.json
scripts/: check-rss-feeds.mjs  generate-default-grid.mjs
src/: App.tsx  index.css  main.tsx  theme-init.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-feed-commands.toml  allow-save-app-icon.toml
src-tauri/src/: feed.rs  icons.rs  lib.rs  url_policy.rs
src/components/: display-preferences-provider.tsx  document-title.tsx  root-error-boundary.tsx  text-scale-provider.tsx  theme-provider.tsx
src/data/: catalog-sources.ts  default-grid-config.json
src/hooks/: use-ai-tools-persistence.ts  use-app-keyboard-shortcuts.ts  use-bookmarks.ts  use-feed-items.ts  use-grid-config.ts  use-history-navigation.ts  use-read-history.ts  use-reader-article.ts  use-scroll-restoration.ts
src/lib/: app-metadata.ts  article-extract.ts  article-truncation.ts  bookmark-utils.ts  feed-disk-cache.ts  feed-messages.ts  feed-preview.ts  feed-stream-sort.ts  feed-time.ts  fetch-article-html.ts  grid-feed-visibility.ts  grid-reorder.ts  grid-sort-dnd.ts  grid-sorting-strategy.ts  html-plain-text.ts  keyboard-shortcut-help.ts  keyboard-shortcut-target.ts  mac-cmd-gap.ts  menu-key-hints.ts  open-external.ts  platform.ts  reader-url.ts  safe-url.ts  search-utils.ts  (+1 more)
(+77 files in other folders)
